--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1300t0f45u.
+
 2007-11-02  Peter Karlsson  <peter@softwolves.pp.>
 
 	* po/dpkg-man.pot: Regenerated.
