--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
+
+        * de.po: Updated to 141t0f337u.
+	
 2007-10-26  Peter Karlsson  <peterk@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
