--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04 Robert Luberda <robert@debian.org>
+
+	* pl.po: Updated to 478t.
+
 2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
 
         * de.po: Updated to 141t0f337u.
