--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-04  Robert Luberda  <robert@debian.org>
+
+	* po/pl.po: Update to 1174t39f132u.
+
 2007-11-04  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* po/de.po: Updated to 1300t0f45u.
