--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-04  Guillem Jover  <guillem@debian.org>
 
+	* scripts/dpkg-architecture.pl: Wrap long strings for die calls
+	at less than 80 chars.
+
+2007-11-04  Guillem Jover  <guillem@debian.org>
+
 	* scripts/Dpkg/Arch.pm (debarch_to_gnutriplet): New function.
 	(gnutriplet_to_debarch): Likewise.
 	* scripts/dpkg-architecture.pl: Use debarch_to_gnutriplet and
