--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-11-06  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Enter the 21st century and switched to UTF-8
+
 2007-10-14  Jacobo Tarrio  <jtarrio@trasno.net>
 
 	* gl.po: Updated to 929t.
